tests/errors/mainBadReturn.milo
// @error: 'main' must return i32 or void

fn main(): i64 {
    return 0
}
